manifests/local/04-networking/flux-system.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flux-system
  namespace: flux-system
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: flux-system
  egress:
    # K8s API server
    - toEntities:
        - kube-apiserver
    # Intra-namespace (inter-controller traffic)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: flux-system
    # DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # All HTTPS egress (registries, S3, GitHub, Helm repos, etc.)
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
