manifests/local/04-networking/kube-system.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kube-system
  namespace: kube-system
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # DNS
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # Cilium Hubble
    - toEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "4244"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s-app: hubble-relay
      toPorts:
        - ports:
            - port: "4245"
              protocol: TCP
    # Metrics Server
    - toEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
