manifests/local/04-networking/local-path-storage.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: local-path-storage
  namespace: local-path-storage
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
