manifests/local/04-networking/seaweedfs-operator.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: seaweedfs-operator
  namespace: seaweedfs-operator
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
      - matchLabels:
          io.kubernetes.pod.namespace: seaweedfs-operator
    - toEndpoints:
      - matchLabels:
          io.kubernetes.pod.namespace: objects
